--- a/.github/workflows/cicd-pipeline.yml
+++ b/.github/workflows/cicd-pipeline.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Conectar ao Servidor e Atualizar Containers
         uses: appleboy/ssh-action@v0.1.6
         with:
-          host: sadowolfy.ddns.net
+          host: 192.168.3.21
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
