--- a/.github/workflows/cicd-pipeline.yml
+++ b/.github/workflows/cicd-pipeline.yml
@@ -6,32 +6,8 @@ on:
       - main
 
 jobs:
-  test:
-    name: Rodar Testes no Backend
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clonar repositório
-        uses: actions/checkout@v3
-
-      - name: Configurar Python
-        uses: actions/setup-python@v3
-        with:
-          python-version: 3.9
-
-      - name: Instalar dependências
-        run: |
-          cd backend
-          pip install -r requirements.txt
-
-      - name: Rodar testes
-        run: |
-          cd backend
-          python -m unittest discover
-
   build:
-    name: Construir e Enviar Imagens Docker
     runs-on: ubuntu-latest
-    needs: test
     steps:
       - name: Clonar repositório
         uses: actions/checkout@v3
@@ -50,7 +26,6 @@ jobs:
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/frontend-app:latest
 
   deploy:
-    name: Deploy no Servidor
     runs-on: ubuntu-latest
     needs: build
     steps:
@@ -60,6 +35,7 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.SERVER_PORT || '22' }}
           script: |
             cd /home/${{ secrets.SERVER_USER }}/docker-project
             docker-compose down
