--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,16 +9,20 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: mydatabase
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
 
   backend:
     image: igorlsb/backend-app:latest
     deploy:
-      replicas: 3  # Escalando backend
+      replicas: 3
     restart: always
     depends_on:
       - database
+    networks:
+      - app_network
 
   frontend:
     image: igorlsb/frontend-app:latest
@@ -27,16 +31,23 @@ services:
       - "8080:80"
     depends_on:
       - backend
+    networks:
+      - app_network
 
   nginx:
-    image: nginx:latest
+    build:
+      context: ./nginx  # Agora o NGINX usa nosso Dockerfile personalizado
     container_name: nginx-load-balancer
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./certbot/www:/var/www/certbot
+      - ./certbot/conf:/etc/letsencrypt
     ports:
-      - "8081:80"
+      - "80:80"
+      - "443:443"
     depends_on:
       - backend
+    networks:
+      - app_network
 
   prometheus:
     image: prom/prometheus
@@ -44,6 +55,8 @@ services:
       - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
       - "9090:9090"
+    networks:
+      - monitoring_network
 
   grafana:
     image: grafana/grafana
@@ -51,6 +64,8 @@ services:
       - "3000:3000"
     depends_on:
       - prometheus
+    networks:
+      - monitoring_network
 
   loki:
     image: grafana/loki:latest
@@ -58,3 +73,14 @@ services:
       - ./monitoring/loki-config.yml:/etc/loki/loki-config.yml
     ports:
       - "3100:3100"
+    networks:
+      - monitoring_network
+
+networks:
+  app_network:
+    driver: bridge
+  monitoring_network:
+    driver: bridge
+
+volumes:
+  postgres_data:
