--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,19 +1,24 @@
-events {}
+server {
+    listen 80;
+    server_name dominiotest1.com www.dominiotest1.com;
 
-http {
-    upstream backend_servers {
-        server backend_1:5000;
-        server backend_2:5000;
-        server backend_3:5000;
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
     }
 
-    server {
-        listen 80;
+    return 301 https://$host$request_uri;
+}
 
-        location / {
-            proxy_pass http://backend_servers;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-        }
+server {
+    listen 443 ssl;
+    server_name dominiotest1.com www.dominiotest1.com;
+
+    ssl_certificate /etc/letsencrypt/live/seudominio.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/seudominio.com/privkey.pem;
+
+    location / {
+        proxy_pass http://backend;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
     }
 }
