--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,6 @@ server {
         root /var/www/certbot;
     }
 
-    # Redireciona todo o tráfego HTTP para HTTPS
     return 301 https://$host$request_uri;
 }
 
@@ -14,26 +13,12 @@ server {
     listen 443 ssl;
     server_name dominiotest1.com www.dominiotest1.com;
 
-    ssl_certificate /etc/letsencrypt/live/dominiotest1.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/dominiotest1.com/privkey.pem;
-
-    # Cabeçalhos de segurança para proteção extra
-    add_header X-Frame-Options DENY;
-    add_header X-Content-Type-Options nosniff;
-    add_header X-XSS-Protection "1; mode=block";
+    ssl_certificate /etc/letsencrypt/live/seudominio.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/seudominio.com/privkey.pem;
 
     location / {
-        proxy_pass http://backend_servers;
+        proxy_pass http://backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto https;
     }
-}
-
-# Configuração do balanceador de carga para distribuir o tráfego entre os containers backend
-upstream backend_servers {
-    server backend_1:5000;
-    server backend_2:5000;
-    server backend_3:5000;
 }
