--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,18 +36,20 @@ services:
 
   nginx:
     build:
-      context: ./nginx  # Agora o NGINX usa nosso Dockerfile personalizado
+      context: ./nginx
     container_name: nginx-load-balancer
     volumes:
       - ./certbot/www:/var/www/certbot
       - ./certbot/conf:/etc/letsencrypt
     ports:
+      - "8081:8081"  # IP acessando 8081 será redirecionado para HTTPS
       - "80:80"
       - "443:443"
     depends_on:
       - backend
     networks:
       - app_network
+
 
   prometheus:
     image: prom/prometheus
