--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,3 +1,12 @@
+# Redirecionamento de IP na porta 8081 para HTTPS
+server {
+    listen 8081;
+    server_name _;  # Captura qualquer requisição feita diretamente pelo IP
+
+    return 301 https://dominiotest1.com$request_uri;
+}
+
+# Redirecionamento de HTTP para HTTPS (porta 80 para 443)
 server {
     listen 80;
     server_name dominiotest1.com www.dominiotest1.com;
@@ -9,16 +18,26 @@ server {
     return 301 https://$host$request_uri;
 }
 
+# Servidor HTTPS principal
 server {
     listen 443 ssl;
     server_name dominiotest1.com www.dominiotest1.com;
 
-    ssl_certificate /etc/letsencrypt/live/seudominio.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/seudominio.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/dominiotest1.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/dominiotest1.com/privkey.pem;
 
     location / {
-        proxy_pass http://backend;
+        proxy_pass http://backend_servers;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto https;
     }
+}
+
+# Definição do Balanceador de Carga para os backends
+upstream backend_servers {
+    server backend_1:5000;
+    server backend_2:5000;
+    server backend_3:5000;
 }
