--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,12 +1,12 @@
 # Redirecionamento de IP na porta 8081 para HTTPS
 server {
-    listen 8081;
-    server_name _;  # Captura qualquer requisição feita diretamente pelo IP
+    listen 8082;
+    server_name _;
 
     return 301 https://dominiotest1.com$request_uri;
 }
 
-# Redirecionamento de HTTP para HTTPS (porta 80 para 443)
+# Redirecionamento de HTTP para HTTPS
 server {
     listen 80;
     server_name dominiotest1.com www.dominiotest1.com;
@@ -18,7 +18,7 @@ server {
     return 301 https://$host$request_uri;
 }
 
-# Servidor HTTPS principal
+# Servidor principal HTTPS
 server {
     listen 443 ssl;
     server_name dominiotest1.com www.dominiotest1.com;
@@ -35,7 +35,7 @@ server {
     }
 }
 
-# Definição do Balanceador de Carga para os backends
+# Definição do Balanceador de Carga
 upstream backend_servers {
     server backend_1:5000;
     server backend_2:5000;
