--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,43 +1,145 @@
-# Redirecionamento de IP na porta 8081 para HTTPS
-server {
-    listen 8082;
-    server_name _;
+worker_processes 1;
 
-    return 301 https://dominiotest1.com$request_uri;
+events {
+    worker_connections 1024;
 }
 
-# Redirecionamento de HTTP para HTTPS
-server {
-    listen 80;
-    server_name dominiotest1.com www.dominiotest1.com;
+http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
+    sendfile on;
+    keepalive_timeout 65;
+
+    # Definição dos backends para balanceamento de carga
+    upstream backend {
+        server backend_1:5000;
+        server backend_2:5000;
+        server backend_3:5000;
     }
 
-    return 301 https://$host$request_uri;
-}
-
-# Servidor principal HTTPS
-server {
-    listen 443 ssl;
-    server_name dominiotest1.com www.dominiotest1.com;
-
-    ssl_certificate /etc/letsencrypt/live/dominiotest1.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/dominiotest1.com/privkey.pem;
-
-    location / {
-        proxy_pass http://backend_servers;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto https;
+    upstream frontend {
+        server frontend_1:80;
     }
-}
 
-# Definição do Balanceador de Carga
-upstream backend_servers {
-    server backend_1:5000;
-    server backend_2:5000;
-    server backend_3:5000;
+    upstream prometheus {
+        server prometheus:9090;
+    }
+
+    upstream grafana {
+        server grafana:3000;
+    }
+
+    upstream loki {
+        server loki:3100;
+    }
+
+    # Redirecionamento HTTP para HTTPS
+    server {
+        listen 80;
+        server_name dominiotest1.com www.dominiotest1.com;
+
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    # Servidor HTTPS para o Backend
+    server {
+        listen 443 ssl;
+        server_name backend.dominiotest1.com;
+
+        ssl_certificate /etc/letsencrypt/live/dominiotest1.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/dominiotest1.com/privkey.pem;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+        location / {
+            proxy_pass http://backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+    }
+
+    # Servidor HTTPS para o Frontend
+    server {
+        listen 443 ssl;
+        server_name frontend.dominiotest1.com;
+
+        ssl_certificate /etc/letsencrypt/live/dominiotest1.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/dominiotest1.com/privkey.pem;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+        location / {
+            proxy_pass http://frontend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+    }
+
+    # Servidor HTTPS para o Prometheus
+    server {
+        listen 443 ssl;
+        server_name prometheus.dominiotest1.com;
+
+        ssl_certificate /etc/letsencrypt/live/dominiotest1.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/dominiotest1.com/privkey.pem;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+        location / {
+            proxy_pass http://prometheus;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+    }
+
+    # Servidor HTTPS para o Grafana
+    server {
+        listen 443 ssl;
+        server_name grafana.dominiotest1.com;
+
+        ssl_certificate /etc/letsencrypt/live/dominiotest1.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/dominiotest1.com/privkey.pem;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+        location / {
+            proxy_pass http://grafana;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+    }
+
+    # Servidor HTTPS para o Loki (Logs)
+    server {
+        listen 443 ssl;
+        server_name loki.dominiotest1.com;
+
+        ssl_certificate /etc/letsencrypt/live/dominiotest1.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/dominiotest1.com/privkey.pem;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+        location / {
+            proxy_pass http://loki;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+    }
 }
