--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     networks:
       - app_network
 
-  nginx:
+ nginx:
     build:
       context: ./nginx
     container_name: nginx-load-balancer
@@ -48,9 +48,18 @@ services:
       - "443:443"
     depends_on:
       - backend
+      - frontend
     networks:
       - app_network
 
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - ./certbot/www:/var/www/certbot
+      - ./certbot/conf:/etc/letsencrypt
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done'"
+    restart: always
+    
   prometheus:
     image: prom/prometheus
     volumes:
