--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     networks:
       - app_network
 
- nginx:
+  nginx:
     build:
       context: ./nginx
     container_name: nginx-load-balancer
@@ -59,7 +59,9 @@ services:
       - ./certbot/conf:/etc/letsencrypt
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done'"
     restart: always
-    
+    depends_on:
+      - nginx
+
   prometheus:
     image: prom/prometheus
     volumes:
