--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,13 +13,11 @@ http {
 
     # Definição dos backends para balanceamento de carga
     upstream backend {
-        server backend_1:5000;
-        server backend_2:5000;
-        server backend_3:5000;
+        server backend:5000;
     }
 
     upstream frontend {
-        server frontend_1:80;
+        server frontend:80;
     }
 
     upstream prometheus {
@@ -34,10 +32,10 @@ http {
         server loki:3100;
     }
 
-    # Redirecionamento HTTP para HTTPS
+    # Redirecionamento HTTP para HTTPS para todos os subdomínios
     server {
         listen 80;
-        server_name dominiotest1.com www.dominiotest1.com;
+        server_name *.dominiotest1.com dominiotest1.com;
 
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
@@ -55,8 +53,6 @@ http {
 
         ssl_certificate /etc/letsencrypt/live/dominiotest1.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/dominiotest1.com/privkey.pem;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
             proxy_pass http://backend;
@@ -74,8 +70,6 @@ http {
 
         ssl_certificate /etc/letsencrypt/live/dominiotest1.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/dominiotest1.com/privkey.pem;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
             proxy_pass http://frontend;
@@ -93,49 +87,9 @@ http {
 
         ssl_certificate /etc/letsencrypt/live/dominiotest1.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/dominiotest1.com/privkey.pem;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
             proxy_pass http://prometheus;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-    }
-
-    # Servidor HTTPS para o Grafana
-    server {
-        listen 443 ssl;
-        server_name grafana.dominiotest1.com;
-
-        ssl_certificate /etc/letsencrypt/live/dominiotest1.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/dominiotest1.com/privkey.pem;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
-
-        location / {
-            proxy_pass http://grafana;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-    }
-
-    # Servidor HTTPS para o Loki (Logs)
-    server {
-        listen 443 ssl;
-        server_name loki.dominiotest1.com;
-
-        ssl_certificate /etc/letsencrypt/live/dominiotest1.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/dominiotest1.com/privkey.pem;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
-
-        location / {
-            proxy_pass http://loki;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
