--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,10 +12,6 @@ http {
     keepalive_timeout 65;
 
     # Definição dos backends para balanceamento de carga
-    upstream backend {
-        server backend:5000;
-    }
-
     upstream frontend {
         server frontend:8081;
     }
@@ -46,23 +42,6 @@ http {
         }
     }
 
-    # Servidor HTTPS para o Backend
-    server {
-        listen 443 ssl;
-        server_name backend.dominiotest1.com;
-
-        ssl_certificate /etc/letsencrypt/live/dominiotest1.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/dominiotest1.com/privkey.pem;
-
-        location / {
-            proxy_pass http://backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-    }
-
     # Servidor HTTPS para o Frontend
     server {
         listen 443 ssl;
@@ -90,6 +69,23 @@ http {
 
         location / {
             proxy_pass http://prometheus;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+    }
+       
+        # Servidor HTTPS para o Grafana
+    server {
+        listen 443 ssl;
+        server_name grafana.dominiotest1.com;
+
+        ssl_certificate /etc/letsencrypt/live/dominiotest1.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/dominiotest1.com/privkey.pem;
+
+        location / {
+            proxy_pass http://grafana;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
