--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,27 +11,10 @@ http {
     sendfile on;
     keepalive_timeout 65;
 
-    # Definição dos backends para balanceamento de carga
-    upstream frontend {
-        server frontend:8081;
-    }
-
-    upstream prometheus {
-        server prometheus:9090;
-    }
-
-    upstream grafana {
-        server grafana:3000;
-    }
-
-    upstream loki {
-        server loki:3100;
-    }
-
-    # Redirecionamento HTTP para HTTPS para todos os subdomínios
+    # Redirecionamento HTTP para HTTPS
     server {
         listen 80;
-        server_name *.dominiotest1.com dominiotest1.com;
+        server_name frontend.dominiotest1.com;
 
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
@@ -50,46 +33,15 @@ http {
         ssl_certificate /etc/letsencrypt/live/dominiotest1.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/dominiotest1.com/privkey.pem;
 
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
         location / {
-            proxy_pass http://frontend;
+            proxy_pass http://frontend:8081;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-    }
-
-    # Servidor HTTPS para o Prometheus
-    server {
-        listen 443 ssl;
-        server_name prometheus.dominiotest1.com;
-
-        ssl_certificate /etc/letsencrypt/live/dominiotest1.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/dominiotest1.com/privkey.pem;
-
-        location / {
-            proxy_pass http://prometheus;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-    }
-       
-        # Servidor HTTPS para o Grafana
-    server {
-        listen 443 ssl;
-        server_name grafana.dominiotest1.com;
-
-        ssl_certificate /etc/letsencrypt/live/dominiotest1.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/dominiotest1.com/privkey.pem;
-
-        location / {
-            proxy_pass http://grafana;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Proto https;
         }
     }
 }
