--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,8 +30,8 @@ http {
         listen 443 ssl;
         server_name frontend.dominiotest1.com;
 
-        ssl_certificate /etc/letsencrypt/live/dominiotest1.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/dominiotest1.com/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/frontend.dominiotest1.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/frontend.dominiotest1.com/privkey.pem;
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
