--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,6 +30,7 @@ http {
         listen 443 ssl;
         server_name frontend.dominiotest1.com;
 
+        # Garantindo que o NGINX só inicie se os certificados existirem
         ssl_certificate /etc/letsencrypt/live/frontend.dominiotest1.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/frontend.dominiotest1.com/privkey.pem;
 
@@ -37,7 +38,7 @@ http {
         ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
-            proxy_pass http://frontend:8081;
+            proxy_pass http://frontend:80;  # Alterado para porta 80 (verifique no docker-compose.yml)
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
