--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,6 +18,7 @@ http {
 
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
+                    allow all;
         }
 
         location / {
