--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,16 +11,17 @@ http {
     sendfile on;
     keepalive_timeout 65;
 
-    # Redirecionamento HTTP para HTTPS
+    # Redirecionamento HTTP para HTTPS e suporte ao Certbot
     server {
         listen 80;
         server_name frontend.dominiotest1.com;
 
+        # Permite que o Certbot crie arquivos de validação
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
-                    allow all;
         }
 
+        # Redireciona todo o tráfego para HTTPS
         location / {
             return 301 https://$host$request_uri;
         }
@@ -31,15 +32,17 @@ http {
         listen 443 ssl;
         server_name frontend.dominiotest1.com;
 
-        # Garantindo que o NGINX só inicie se os certificados existirem
+        # Impede erro de NGINX ao iniciar sem certificados
         ssl_certificate /etc/letsencrypt/live/frontend.dominiotest1.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/frontend.dominiotest1.com/privkey.pem;
 
+        # Protocolo e segurança SSL
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
+        # Configuração do proxy reverso para o frontend
         location / {
-            proxy_pass http://frontend:80;  # Alterado para porta 80 (verifique no docker-compose.yml)
+            proxy_pass http://frontend:80;  # Verifique se o frontend usa porta 80 no docker-compose.yml
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
