--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,12 +16,13 @@ http {
         listen 80;
         server_name frontend.dominiotest1.com;
 
-        # Permite que o Certbot crie arquivos de validação
+        # Diretório que o Certbot usa para validação
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
+            allow all;
         }
 
-        # Redireciona todo o tráfego para HTTPS
+        # Redireciona todo o tráfego para HTTPS após a validação
         location / {
             return 301 https://$host$request_uri;
         }
@@ -32,17 +33,16 @@ http {
         listen 443 ssl;
         server_name frontend.dominiotest1.com;
 
-        # Impede erro de NGINX ao iniciar sem certificados
+        # Caminho correto para os certificados compartilhados com Certbot
         ssl_certificate /etc/letsencrypt/live/frontend.dominiotest1.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/frontend.dominiotest1.com/privkey.pem;
 
-        # Protocolo e segurança SSL
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
-        # Configuração do proxy reverso para o frontend
+        # Proxy reverso para o frontend
         location / {
-            proxy_pass http://frontend:80;  # Verifique se o frontend usa porta 80 no docker-compose.yml
+            proxy_pass http://frontend:80;  # Verifique se o frontend está rodando na porta correta
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
