--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,38 +11,29 @@ http {
     sendfile on;
     keepalive_timeout 65;
 
-    # Redirecionamento HTTP para HTTPS e suporte ao Certbot
+    # Redirecionamento HTTP para HTTPS
     server {
         listen 80;
         server_name frontend.dominiotest1.com;
 
-        # Diretório que o Certbot usa para validação
-        location /.well-known/acme-challenge/ {
-            root /var/www/certbot;
-            allow all;
-        }
-
-        # Redireciona todo o tráfego para HTTPS após a validação
         location / {
             return 301 https://$host$request_uri;
         }
     }
 
-    # Servidor HTTPS para o Frontend
+    # Servidor HTTPS com Certificado Autoassinado
     server {
         listen 443 ssl;
         server_name frontend.dominiotest1.com;
 
-        # Caminho correto para os certificados compartilhados com Certbot
         ssl_certificate /etc/letsencrypt/live/frontend.dominiotest1.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/frontend.dominiotest1.com/privkey.pem;
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
-        # Proxy reverso para o frontend
         location / {
-            proxy_pass http://frontend:80;  # Verifique se o frontend está rodando na porta correta
+            proxy_pass http://frontend:80;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
