--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,31 @@
 version: '3.8'
 
 services:
+  nginx:
+    build:
+      context: ./nginx
+    container_name: nginx-load-balancer
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./certbot/www:/var/www/certbot
+      - ./certbot/conf:/etc/letsencrypt
+    ports:
+      - "80:80"
+      - "443:443"
+    depends_on:
+      - certbot
+      - frontend
+    networks:
+      - app_network
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - ./certbot/www:/var/www/certbot
+      - ./certbot/conf:/etc/letsencrypt
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew --webroot -w /var/www/certbot --quiet && nginx -s reload; sleep 12h & wait $${!}; done'"
+    restart: always
+    networks:
+      - app_network
   database:
     image: postgres:latest
     container_name: database
@@ -35,32 +60,7 @@ services:
       - app_network
     # Não expor porta diretamente, pois o NGINX faz esse papel
 
-  nginx:
-    build:
-      context: ./nginx
-    container_name: nginx-load-balancer
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./certbot/www:/var/www/certbot  # Diretório de validação do Certbot
-      - ./certbot/conf:/etc/letsencrypt  # Certificados SSL
-    ports:
-      - "80:80"
-      - "443:443"
-    depends_on:
-      - backend
-      - frontend
-    networks:
-      - app_network
 
-  certbot:
-    image: certbot/certbot
-    volumes:
-      - ./certbot/www:/var/www/certbot
-      - ./certbot/conf:/etc/letsencrypt
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew --webroot -w /var/www/certbot --quiet && nginx -s reload; sleep 12h & wait $${!}; done'"
-    restart: always
-    networks:
-      - app_network
 
   prometheus:
     image: prom/prometheus
