--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,9 +1,6 @@
 FROM nginx:alpine
 
-# Instalar Certbot e dependências necessárias
-RUN apk add --no-cache certbot bash openssl
-
-# Criar diretórios necessários para o Certbot
+# Criar diretórios necessários para Certbot
 RUN mkdir -p /var/www/certbot /etc/letsencrypt/live /etc/letsencrypt/archive \
     && chmod -R 755 /var/www/certbot /etc/letsencrypt \
     && chown -R root:root /etc/letsencrypt
@@ -11,9 +8,9 @@ RUN mkdir -p /var/www/certbot /etc/letsencrypt/live /etc/letsencrypt/archive \
 # Copiar configuração do NGINX
 COPY nginx.conf /etc/nginx/nginx.conf
 
-# Copiar script de renovação do Certbot
-COPY certbot-renew.sh /usr/local/bin/certbot-renew.sh
-RUN chmod +x /usr/local/bin/certbot-renew.sh
+# Copiar o script de entrada
+COPY entrypoint.sh /usr/local/bin/entrypoint.sh
+RUN chmod +x /usr/local/bin/entrypoint.sh
 
-# Comando de inicialização: só inicia o NGINX se o script rodar corretamente
-CMD ["sh", "-c", "/usr/local/bin/certbot-renew.sh && nginx -g 'daemon off;'"]
+# Comando de inicialização (aguarda certificados antes de iniciar)
+CMD ["/usr/local/bin/entrypoint.sh"]
