--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,6 +1,9 @@
 FROM nginx:alpine
 
-# Criar diretórios necessários para Certbot
+# Instalar Certbot e dependências
+RUN apk add --no-cache certbot bash openssl
+
+# Criar diretórios necessários para o Certbot
 RUN mkdir -p /var/www/certbot /etc/letsencrypt/live /etc/letsencrypt/archive \
     && chmod -R 755 /var/www/certbot /etc/letsencrypt \
     && chown -R root:root /etc/letsencrypt
@@ -8,9 +11,9 @@ RUN mkdir -p /var/www/certbot /etc/letsencrypt/live /etc/letsencrypt/archive \
 # Copiar configuração do NGINX
 COPY nginx.conf /etc/nginx/nginx.conf
 
-# Copiar o script de entrada e garantir permissões
+# Copiar script de inicialização
 COPY entrypoint.sh /usr/local/bin/entrypoint.sh
 RUN chmod +x /usr/local/bin/entrypoint.sh
 
-# Definir como ponto de entrada
-ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
+# Comando de inicialização
+CMD ["/usr/local/bin/entrypoint.sh"]
