--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -15,5 +15,12 @@ COPY nginx.conf /etc/nginx/nginx.conf
 COPY entrypoint.sh /usr/local/bin/entrypoint.sh
 RUN chmod +x /usr/local/bin/entrypoint.sh
 
+# Copiar script de inicialização
+RUN docker run --rm -it \
+-v /etc/letsencrypt:/etc/letsencrypt \
+-v /var/lib/letsencrypt:/var/lib/letsencrypt \
+certbot/certbot certonly --manual --preferred-challenges dns \
+--email igor.lsb@hotmail.com -d frontend.dominiotest1.com --agree-tos --no-eff-email --force-renewal
+
 # Comando de inicialização
 CMD ["/usr/local/bin/entrypoint.sh"]
