--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,7 +14,7 @@ http {
     # Redirecionamento HTTP para HTTPS
     server {
         listen 80;
-        server_name frontendtest626.com;
+        server_name dominioteste.com;
 
         location / {
             return 301 https://$host$request_uri;
@@ -24,16 +24,18 @@ http {
     # Servidor HTTPS com Certificado Autoassinado
     server {
         listen 443 ssl;
-        server_name frontendtest626.com;
-
-        ssl_certificate /etc/letsencrypt/live/frontendtest626.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/frontendtest626.com/privkey.pem;
+        server_name dominioteste.com;
+        
+        ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
+        ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
+        ssl_dhparam /etc/nginx/ssl/dhparam.pem;
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
+        ssl_prefer_server_ciphers on;
 
         location / {
-            proxy_pass http://frontendtest626:80;
+            proxy_pass http://dominioteste:80;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
