--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -25,7 +25,7 @@ http {
     server {
         listen 443 ssl;
         server_name dominioteste.com;
-        
+
         ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
         ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
         ssl_dhparam /etc/nginx/ssl/dhparam.pem;
@@ -35,7 +35,7 @@ http {
         ssl_prefer_server_ciphers on;
 
         location / {
-            proxy_pass http://dominioteste:80;
+            proxy_pass http://frontend:80;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
