--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,50 +1,24 @@
 version: '3.8'
 
 services:
+  frontend:
+    image: igorlsb/frontend-app:latest
+    restart: always
+    networks:
+      - app_network
+
   nginx:
     build:
       context: ./nginx
     container_name: nginx-load-balancer
-    volumes:
-      - /etc/nginx/ssl:/etc/nginx/ssl  # Volume para armazenar os certificados
     ports:
       - "80:80"
       - "443:443"
     depends_on:
       - frontend
-    networks:
-      - app_network
-      
-  database:
-    image: postgres:latest
-    container_name: database
-    restart: always
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: mydatabase
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
-    networks:
-      - app_network
-
-  backend:
-    image: igorlsb/backend-app:latest
-    deploy:
-      replicas: 3
-    restart: always
-    depends_on:
-      - database
-    networks:
-      - app_network
-
-  frontend:
-    image: igorlsb/frontend-app:latest
-    restart: always
-    depends_on:
-      - backend
+      - grafana
+      - prometheus
+      - loki
     networks:
       - app_network
 
@@ -55,7 +29,7 @@ services:
     ports:
       - "9090:9090"
     networks:
-      - monitoring_network
+      - app_network
 
   grafana:
     image: grafana/grafana
@@ -64,7 +38,7 @@ services:
     depends_on:
       - prometheus
     networks:
-      - monitoring_network
+      - app_network
 
   loki:
     image: grafana/loki:latest
@@ -73,13 +47,8 @@ services:
     ports:
       - "3100:3100"
     networks:
-      - monitoring_network
+      - app_network
 
 networks:
   app_network:
     driver: bridge
-  monitoring_network:
-    driver: bridge
-
-volumes:
-  postgres_data:
